# agent02

./: .gitignore  README.md  pyproject.toml  pytest.ini  repl.py  run.py  run_research.py
brain/: build.py  orchestrator.py  research_entrypoint.py  state.py
brain/c1/: state.py
brain/c2/: evaluator.py  meta_controller.py  meta_directives.py  meta_planner.py  meta_types.py  orchestrator.py  plan_visualizer.py  repair_planner.py  visualize.py
brain/c5/: reflection_engine.py  reflection_types.py  trace_logger.py  trace_pretty.py
brain/c6/: __init__.py  meta_controller.py  meta_types.py
brain/cli/: run_research.py
brain/executor/: base.py  executor.py
brain/llm/: lmstudio_llm.py
docs/: Makefile  README.md  doc_map.md  journal.md  journal_01.md  journal_02.md  justfile
misc/: create_01.sh  create_poster_structure_01.sh  create_poster_structure_02.sh  dx_cat.sh  rename_chapters.sh
tests/: test_c1_memory_guided_planner.py  test_c1_plan.py  test_c1_tool_aware_planner.py  test_c2_executor.py  test_c2_meta_controller.py  test_c2_orchestrator.py  test_c3_memory_store.py  test_c4_smoke.py  test_c4_tool_registry.py  test_c5_directive_integration.py  test_c5_reflection_engine.py  test_c6_full_cycle.py  test_c7_skill_learning.py  test_ch6_full_cycle.py  test_ch7_skill_learning.py  test_memory_v2.py  test_orchestrator_v2.py  test_planner_v3.py  test_planner_v3_5.py  test_research_pipeline.py  test_router_v2.py  test_router_v2_5.py  test_s4_full_cycle.py  test_s4_memory_and_hooks.py  test_s4_plan_and_trace.py  test_s4_skill_integration.py  test_s4_tools_and_llm.py
(+105 files in other folders)
